assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Flavors&family=Kalam:wght@300&family=Shantell+Sans:wght@300&display=swap');

/* The following code removes all default margins, padding and borders */
* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: Shantell Sans, sans-serif;
    font-weight: 300;
    color: #3a3a3a;
}

/* headings and logo */

h1, h2 {
    font-family: Kalam, sans-serif;
    text-transform: uppercase;
    letter-spacing: 4px;
    color: #252525;
}

/* Why is the font-weight not as specified here? */
#logo {
    float: left;
    font-size: 280%;
    font-weight: 600;
    margin-left: 30px
}

/* navigation links */
#menu {
    font-size: 110%;
    letter-spacing: 4px;
}

/* sets the line height for the logo and menu and by default 
    the text will be centered in the vertical line height for a balanced look */
#menu, #logo {
    line-height: 75px;
}

#menu li {
    float: right;
    list-style-type: none;
    margin-right: 30px;
}

#menu a {
    text-decoration: none;
    color: inherit;
}

#menu a:hover {
    border-bottom: 1px solid #3a3a3a;
}

.active {
    border-bottom: 1px solid #3a3a3a;
}

/* hero image */

#hero-outer {
    height: 480px;
    width: 100%;
    overflow: hidden;
    position: relative;
}

#cover-text, #cover-text h2 {
    color: #fff;
}

#hero-image {
    height: 400px;
    width: 100%;
    background: url(../images/dragos-gontariu-54VAb3f1z6w-unsplash-cropped.jpg) no-repeat center center;
}

#cover-text {
    font-size: 130%;
    font-family: Kalam, sans-serif;
    text-transform: uppercase;
    letter-spacing: 4px;
    text-align: center;
    
    width: 600px;
    height: 120px;

    padding-top: 40px;
    padding-left: 30px;
    padding-right: 30px;

    background-color: rgba(201, 18, 243, 0.7);
    border-radius: 20px;

    bottom: 0px;
    right: 150px;

    position: absolute;
}

.button {
    background: rgba(201, 18, 243);
    border: 1px solid white;
    color: white;
    margin-top: 50px;
    padding: 10px 10px;
    border-radius: 5px;
    font-size: x-large;
    font-weight: 600;
    text-transform: uppercase;
    text-decoration: none;
    }

#jump-right-in {
    height: 160px;
    width: 100%;
    text-align: center;
    padding-top: 10px;
    padding-bottom: 20px;
}

#link-to-offerings {
    text-align: center;
    margin: 20px 0;
    font-size: 200%;
}

#philosophy {
    height: 600px;
}

#left-about {
    padding-top: 30px;
    width: 33%;
    float: left;
}

#right-about {
    padding-top: 30px;
    width: 33%;
    float: right;
}

#center-about {
    padding-top: 0px;
    width: 33%;
    margin: 0 auto; /* centers the div - no float center is available */
}

hr {
    border-top: 2px solid rgba(201, 18, 243);
    width: 100%;
    margin: 5px 0;
}

.hr1 {
    border: 10px solid #c912f3;
    border-radius: 10px;
    width: 90%;
    margin: 0 auto;
}


.left-about-heading {
    width: 60%;
    float: right;
    line-height: 20px;
    clear: both;
    margin-bottom: 50px;
}

.right-about-heading {
    width: 60%;
    float: left;
    line-height: 20px;
    clear: both;
    margin-bottom: 50px;
}

.right-about-heading h2 {
    text-align: right;
}

.right-about-heading p {
    text-align: right;
}

#welcome {
    text-align: center;
    margin: 20px 0;
    font-size: 200%;
}

#circle-container {
    width: 300px;
    height: 300px;
    padding: 30px;
    border-style: solid;
    border-color: #ccc;
    border-width: 1px;
    border-radius: 50%;
    margin: 0 auto;
}

#circle-cover-bg {
    background: url('../images/senjuti-kundu-JfolIjRnveY-unsplash-cropped.jpg') no-repeat center center;
    height: 100%;
    border-radius: 50%;
}

#class-times {
    clear: both;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

#class-times div {
    color: #fafafa;
    background-color: rgba(201, 18, 243, 0.7);
    width: 300px;
    height: 480px;
    padding: 20px 0 0 0;
    text-align: center;
    border: 2px solid white;
    border-radius: 20px;
    box-sizing: border-box;
}

#class-times h2 {
    color:#fafafa;
    font-size: xx-large;
    margin: 10px auto;
}

#class-times h3 {
    color:#fafafa;
    font-size: x-large;
    margin: 10px auto;
}

#class-times hr {
    border-top: 2px solid #fafafa;
    width: 80%;
    margin: 5px auto;
}

footer {
    clear: both;
    height: 150px;
    width: 100%;
}

.social-networks {
    height: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 40px;
}

.social-networks li {
    list-style-type: none;
    padding: 50px;
}

.social-networks i {
    font-size: 200%;
    color: #3a3a3a;
}

#about-the-artists {
    clear: both;
}

#circle-wkd {
    background: url('../images/senjuti-kundu-JfolIjRnveY-unsplash-cropped.jpg') no-repeat center center;
    height: 100%;
    border-radius: 50%;
}

.artist {
    padding: 50px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-content: center;
    align-items: center;
}

.artist-bio {
    background-color: white;
    margin: 0 auto;
    width: 50%;
}

.artist-image {
    width: 300px;
    height: 300px;
    padding: 0px;
    border-style: solid;
    border-color: #ccc;
    border-width: 1px;
    border-radius: 50%;
    margin: 0 auto;
}

#circle-bg-wkd {
    background: url('../images/WKDcropped.jpg') no-repeat center center;
    height: 100%;
    border-radius: 50%;
}

/* Main Gallery CSS */
.grid-wrapper > div {
	display: flex;
	justify-content: center;
	align-items: center;
}
.grid-wrapper > div > img {
	width: 100%;
	height: 100%;
	object-fit: cover;
	border-radius: 5px;
}

.grid-wrapper {
    margin: 0 10px 0 10px;
    clear: both;
	display: grid;
	grid-gap: 10px;
	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
	grid-auto-rows: 200px;
	grid-auto-flow: dense;
}
.grid-wrapper .wide {
	grid-column: span 2;
}
.grid-wrapper .tall {
	grid-row: span 2;
}
.grid-wrapper .big {
	grid-column: span 2;
	grid-row: span 2;
}

